Wed Nov 26 22:18:43 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 * Power Distribution Unit (PDU) preliminary support (2): add support for a wide
   range of PDUs through the Powerman project, and its libpowerman.
   - drivers/powerman-pdu.[ch]: created a driver that use libpowerman to
     interact with the Powerman daemon,
   - drivers/Makefile.am: add the necessary rules for the powerman-pdu driver,
   - man/Makefile.am: add the necessary rules for the powerman-pdu manpage,
   - man/powerman-pdu.8: add the manpage to document powerman-pdu,
   - man/nutupsdrv.8: add a reference to powerman-pdu 
   - configure.in, m4/nut_check_libpowerman.m4: add and use a macro to detect
     libpowerman and its flags, and propose a --with-powerman configure option,
   - data/driver.list: add the devices supported by Powerman.

Thu Nov 20 09:40:24 UTC 2008 / Arnaud Quette <ArnaudQuette@Eaton.com>

 * Power Distribution Unit (PDU) preliminary support (1):
   - drivers/eaton-aphel-mib.h: add support for Eaton ePDUs (Managed and
     Monitored) and some Aphel models.
   - drivers/raritan-mib.h: add support for some Raritan PDUs.
   These two MIBs add the new "device.*" collection, as presented on nut-upsdev
   mailing list.
   - drivers/snmp-ups.c:
     - switch to a 2 decimals precision for numeric values
     - improve reactivity for stop requests
     - differentiate "unknown mib" and "device not detected" (which is equal to
       "no supported mib found"), to prepare for the probe flag
     - trace the requested OID in nut_snmp_get()
   - drivers/snmp-ups.h: bump the driver release to 0.44, and update the
     load_mib2nut() prototype.
   - drivers/Makefile.am: add the new MIB files
   - data/driver.list: add the supported PDUs from Eaton, Aphel and Raritan,
   - man/snmp-ups.8: document the new MIBS and devices,
   - doc/new-names.txt: add some new variables, in the outlet collection, to
     report PDUs values.
